--- a/MaxMethod/MaxMethod.csproj
+++ b/MaxMethod/MaxMethod.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{21A08DEE-8A01-4141-8BFA-ECA1CC6855FE}</ProjectGuid>
+    <ProjectGuid>{9AC1B1BC-B64E-44A2-81B3-2D3395C5208E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HelloName</RootNamespace>
-    <AssemblyName>HelloName</AssemblyName>
+    <RootNamespace>MaxMethod</RootNamespace>
+    <AssemblyName>MaxMethod</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HelloName.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
