--- a/EnglishNameOfLastDigit/EnglishNameOfLastDigit.csproj
+++ b/EnglishNameOfLastDigit/EnglishNameOfLastDigit.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9AC1B1BC-B64E-44A2-81B3-2D3395C5208E}</ProjectGuid>
+    <ProjectGuid>{E97E5380-0A2D-4B53-82B8-AC6C3DBEBE16}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MaxMethod</RootNamespace>
-    <AssemblyName>MaxMethod</AssemblyName>
+    <RootNamespace>EnglishNameOfLastDigit</RootNamespace>
+    <AssemblyName>EnglishNameOfLastDigit</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaxMethod.cs" />
+    <Compile Include="EnglishNameOfLastDigit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
