--- a/PriceChecker/PrimeChecker.csproj
+++ b/PriceChecker/PrimeChecker.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PriceChecker.cs" />
+    <Compile Include="PrimeChecker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
